--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "eslint-plugin-react-refresh": "^0.4.20",
     "globals": "^16.4.0",
     "tw-animate-css": "^1.4.0",
+    "typescript": "^5.9.3",
     "vite": "^7.1.7"
   }
 }
